Awards section added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@
         <a href="{{ '/' | relative_url }}">Home</a>
         <a href="{{ '/projects/' | relative_url }}">Projects</a>
         <a href="{{ '/experience/' | relative_url }}">Experience</a>
-        <a href="{{ '/about/' | relative_url }}">About</a>
+        <a href="{{ '/awards/' | relative_url }}">Awards & Certifications</a>
+        <a href="{{ '/about/' | relative_url }}">About Me</a>
         <a href="{{ '/contact/' | relative_url }}">Contact</a>
       </div>
     </nav>
