--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
+  <div class="bg-orbit"></div>
+
   <header class="site-header">
     <nav class="nav">
       <div class="nav-brand">
@@ -16,8 +18,7 @@
         <a href="{{ '/' | relative_url }}">Home</a>
         <a href="{{ '/projects/' | relative_url }}">Projects</a>
         <a href="{{ '/experience/' | relative_url }}">Experience</a>
-        <a href="{{ '/awards/' | relative_url }}">Awards & Certifications</a>
-        <a href="{{ '/about/' | relative_url }}">About Me</a>
+        <a href="{{ '/about/' | relative_url }}">About</a>
         <a href="{{ '/contact/' | relative_url }}">Contact</a>
       </div>
     </nav>
